[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/square.gd" type="Script" id=1]
[ext_resource path="res://sprites/box.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 26, 26 )

[node name="square" type="KinematicBody2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 2
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -10, -10, 20, 20 )

[node name="Tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[connection signal="input_event" from="." to="." method="_on_square_input_event"]

[connection signal="exit_screen" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_exit_screen"]

[connection signal="tween_complete" from="Tween" to="." method="_on_Tween_tween_complete"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


